Fix card name gradients not showing when filtering the gallery

--- a/TableturfBattleClient/tableturf.css
+++ b/TableturfBattleClient/tableturf.css
@@ -648,6 +648,12 @@ svg.card text.cardDisplayName {
 	transform: scaleX(var(--scale));
 }
 
+#cardDisplayAssets {
+	position: absolute;
+	width: 0;
+	height: 0;
+}
+
 rect.Empty, rect.empty {
 	fill: #00000080;
 	stroke: #60606080;
